Improve builig amd add uplaod graphic only without template

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,10 @@ android {
             buildConfigField 'String', 'TRANSPORT', '"MULTI_HB"'
             buildConfigField 'String', 'SECURITY', '"OFF"'
         }
+        tcp {
+            buildConfigField 'String', 'TRANSPORT', '"TCP"'
+            buildConfigField 'String', 'SECURITY', '"OFF"'
+        }
     }
 
     compileOptions {
